# corewar

./: .gitignore  vis.c
asm/: Makefile  aFile  asm  asm.c  asm.h  dop_function.c  free_del.c  new.cor  op.c  op.h  oper_name.c  pars.c  pars_one.c  pars_operation.c  print_struct.c  probnic  proverca_registra.c  str_label.c  trace.c  write_code.c  zap_label.c  zap_operation.c
asm/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_latoi.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  (+33 more)
untitled folder/: vis.c
vm/: CMakeLists.txt  args.c  checks.c  circle.c  corewar  cycle.c  errors.c  ft_print_memory.c  functions.c  init.c  koretko_utils.c  main.c  op.c  operations.c  operations2.c  operations3.c  parse.c  test.c  todo.txt  ttt  ttt.py  ttt_ne_nash.py  utils.c
vm-Makefile/: 1111  Makefile  checks.c  corewar  cycle.c  errors.c  functions.c  koretko_utils.c  main.c  main.py  map  mem_out  out.json  out.txt  parse.c  pm.txt  test.c  vis.c
vm-Makefile new/: Makefile  Makefiletest  cycle.c  functions.c  main.c  parse.c  vis.c
vm/champs/: first.s
vm/inc/: op.h  vm.h  vm_op.h
vm/libft/: CMakeLists.txt
vm/libft/libft/: ft_atoi_base.c  ft_pow.c  ft_print_memory.c  libft.h
vm/tests/: ldi1.cor  lld1.cor  lldi1.cor  zjmp1.cor  zjmp3.cor
(+56 files in other folders)
